# PGCE

./: .gitignore  CFE_demostration_pipeline.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PGCE_Comparison.ipynb  README.md  pyproject.toml
docs/: api.md  development.md  installation.md  quickstart.md
examples/: README.md  sep_cfe_dice_quickstart.ipynb
src/PGCE/: __init__.py  analyzer.py  constrained_genetic.py  constraints.py  inverse_reconstruction.py  pipeline.py
src/SEP_CFE_DiCE/: README.md  analyzer.py  constrained_genetic.py  constraints.py  plotting.py
