[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sep-cfe-dice"
version = "0.1.0"
description = "Standalone constrained DiCE toolkit for solar energetic particle counterfactual workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SolarEnergyParticlePrediction contributors" }
]
keywords = ["counterfactuals", "explainability", "dice", "solar physics", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "dice-ml>=0.11"
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0"
]

dev = [
  "pytest>=7.0",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/your-org/sep-cfe-dice"
Repository = "https://github.com/your-org/sep-cfe-dice"
Issues = "https://github.com/your-org/sep-cfe-dice/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
