[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PGCE"
version = "0.1.0"
description = "Standalone constrained counterfactual toolkit for solar energetic particle workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Pranjal Patil" }
]
keywords = ["counterfactuals", "explainability", "dice", "solar physics", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "dice-ml>=0.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/Pranjal-Patil-Pers/PGCE"
Repository = "https://github.com/Pranjal-Patil-Pers/PGCE"
Issues = "https://github.com/Pranjal-Patil-Pers/PGCE/issues"
Changelog = "https://github.com/Pranjal-Patil-Pers/PGCE/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
